codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__pnpm_update_available_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 1389
expression: rendered
---
╭──────────────────────────────────────────────────╮
│ ✨ Update available! 0.160.1+personal.1 -> 9.9.9 │
│ Run pnpm add -g @openai/codex to update.         │
│                                                  │
│ See full release notes:                          │
│ https://github.com/openai/codex/releases/latest  │
╰──────────────────────────────────────────────────╯
